public class passwordTemplate 
{
    public string Identificador {get; set;}
    public string Senha {get; set;}
}